src/objects/Point_of_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCM_Tracker_Identifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OCM Tracker Identifier</label>
        <referenceTo>Comms_Marketing_Service__c</referenceTo>
        <relationshipLabel>Point of Contacts</relationshipLabel>
        <relationshipName>Point_of_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Time__c</fullName>
        <inlineHelpText>Each assignee should enter the amount of time they spent on the task. Example: If it takes 1 hour 15 minutes, then 1.25 should be entered here.</inlineHelpText>
        <label>Point of Contact Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POC_Update_Status__c</fullName>
        <label>POC Update Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Email__c</fullName>
        <formula>Point_of_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Point of Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Master_ORG__c</fullName>
        <formula>Point_of_Contact_Name__r.MAJOR_ORG__c</formula>
        <label>Point of Contact Master Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Point of Contacts</relationshipLabel>
        <relationshipName>Point_of_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Org__c</fullName>
        <formula>Point_of_Contact_Name__r.MAJOR_ORG_DESCRIPTION__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Point of Contact Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Phone__c</fullName>
        <formula>Point_of_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Point of Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Type__c</fullName>
        <label>Point of Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Requester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Point of Contact</label>
    <nameField>
        <displayFormat>POC{0000000}</displayFormat>
        <label>Point of Contact Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Point of Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Point_Of_Contact_Type_One</fullName>
        <active>true</active>
        <description>&quot;Point of Contact Type&quot; and &quot;Assignee&quot; fields cannot be filled together.</description>
        <errorConditionFormula>AND(
NOT( ISPICKVAL( Point_of_Contact_Type__c ,&quot;&quot;) ), 
Assignee__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Assignee__c</errorDisplayField>
        <errorMessage>&quot;Point of Contact Type&quot; and &quot;Assignee&quot; fields cannot be filled together.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Point_Of_Contact_Type_Or_Assignee</fullName>
        <active>true</active>
        <description>Either &quot;Point of Contact Type&quot; field Or &quot;Assignee&quot; field should be filled.</description>
        <errorConditionFormula>AND(
ISPICKVAL( Point_of_Contact_Type__c ,&quot;&quot;) , 
Assignee__c = FALSE )</errorConditionFormula>
        <errorDisplayField>Point_of_Contact_Type__c</errorDisplayField>
        <errorMessage>Either &quot;Point of Contact Type&quot; field Or &quot;Assignee&quot; field should be filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Point_of_Contact_Type_Principal</fullName>
        <active>true</active>
        <description>&quot;Point of Contact Type&quot; field value &quot;Principal&quot; is only available for &quot;Media Affairs &amp; Public Engagement&quot; record.</description>
        <errorConditionFormula>AND( OCM_Tracker_Identifier__r.RecordType.DeveloperName &lt;&gt; &quot;Media_Affairs_Public_Engagement&quot;,  ISPICKVAL(Point_of_Contact_Type__c , &quot;Principal&quot;))</errorConditionFormula>
        <errorDisplayField>Point_of_Contact_Type__c</errorDisplayField>
        <errorMessage>&quot;Point of Contact Type&quot; field value &quot;Principal&quot; is only available for &quot;Media Affairs &amp; Public Engagement&quot; record.</errorMessage>
    </validationRules>
</CustomObject>